--- a/WizardsVsWirebacks/WizardsVsWirebacks.csproj
+++ b/WizardsVsWirebacks/WizardsVsWirebacks.csproj
@@ -26,8 +26,13 @@
     <PackageReference Include="Gum.MonoGame" Version="2025.8.4.1" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.*" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.*" />
+    <MonoGameContentReference Include="Content/content.mgcb">
+      <Link>Content/Content.mgcb</Link>
+    </MonoGameContentReference>
   </ItemGroup>
 
+  
+  
   <ItemGroup>
 	<None Update="Content\GumProject\**\*.*">
 		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
