--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# Gum project settings
+WizardsVsWirebacks/Content/GumProject2/ProjectCodeSettings.codsj
